# cmakebug

./: .gitignore  README.md
projects/android-studio/: build.gradle  settings.gradle
projects/android-studio/app/: build.gradle
projects/android-studio/app/src/androidTest/java/com/example/mylib2testapp/: ExampleInstrumentedTest.kt
projects/android-studio/app/src/main/: AndroidManifest.xml
projects/android-studio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.sh
projects/android-studio/app/src/main/java/com/example/mylib2testapp/: MainActivity.java
projects/android-studio/app/src/main/res/values/: strings.xml
projects/android-studio/app/src/test/java/com/example/mylib2testapp/: ExampleUnitTest.kt
projects/android-studio/gradle/wrapper/: gradle-wrapper.properties
projects/android-studio/libMyLibrary2/: build.gradle
projects/android-studio/libMyLibrary2/src/androidTest/java/com/example/libmylibrary2/: ExampleInstrumentedTest.java
projects/android-studio/libMyLibrary2/src/main/: AndroidManifest.xml
projects/android-studio/libMyLibrary2/src/main/cpp/: CMakeLists.txt
projects/android-studio/libMyLibrary2/src/main/java/com/example/libmylibrary2/: NativeLib.java
projects/android-studio/libMyLibrary2/src/test/java/com/example/libmylibrary2/: ExampleUnitTest.java
src/: mylib2.cpp  mylib2.hpp
